update tasks api
